--- a/3bookstore/2postgres_sql/docker-compose.yml
+++ b/3bookstore/2postgres_sql/docker-compose.yml
@@ -1,8 +1,9 @@
-# docker-compose.yml
+version: "3.9"
+
 services:
   web:
     build: .
-    command: python /code/manage.py runserver 0.0.0.0:8000
+    command: python manage.py runserver 0.0.0.0:8000
     volumes:
       - .:/code
     ports:
@@ -12,12 +13,12 @@ services:
 
   db:
     image: postgres:15
-    environment:
-      POSTGRES_DB: postgres
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
     volumes:
       - postgres_data:/var/lib/postgresql/data/
+    environment:
+      POSTGRES_DB: django_db
+      POSTGRES_USER: django_user
+      POSTGRES_PASSWORD: django_password
 
 volumes:
   postgres_data:
